# windows-env

./: .appveyor.yml  AddPath.hs  FixNtSymbolPath.hs  LICENSE.txt  ListPath.hs  README.md  RegUtils.hs  RemovePath.hs  SetEnv.hs  UnsetEnv.hs  appveyor.yml  stack.yaml  windows-env.cabal  wintmp.cabal
.appveyor/: build.ps1
.github/workflows/: ci.yml
app/: AddPath.hs  ListPaths.hs  RemovePath.hs  SetEnv.hs  UnsetEnv.hs
app/Utils/: Path.hs  PromptMessage.hs
apps/: AddPath.hs  Banner.hs  FixNtSymbolPath.hs  ListPath.hs  ListPaths.hs  Prompt.hs  PromptMessage.hs  RemovePath.hs  SetEnv.hs  UnsetEnv.hs  Utils.hs
lib/: WindowsEnv.hs
pdbs/: README
src/: EnvUtils.hs  Environment.hs  Registry.hs  Utils.hs  WindowsEnv.hs  WindowsUtils.hs
src/Windows/: Environment.hs  Registry.hs  Utils.hs
src/WindowsEnv/: Environment.hs  Registry.hs  Utils.hs  ccall.h
symbols/: .gitignore  README
vscache/: README
