name:                windows-env
version:             0.1.0.0
synopsis:            Manage Windows environment variables
description:         Please see README.md
homepage:            https://github.com/egor-tensin/windows-env
license:             MIT
license-file:        LICENSE.txt
author:              Egor Tensin
maintainer:          Egor.Tensin@gmail.com
copyright:           (c) 2015 Egor Tensin <Egor.Tensin@gmail.com>
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Windows.Environment
  other-modules:       Windows.Registry, Windows.Utils
  ghc-options:         -Wall -Werror
  build-depends:       base, bytestring, split, text, transformers, Win32
  default-language:    Haskell2010

executable addpath
  hs-source-dirs:      apps
  main-is:             AddPath.hs
  other-modules:       Prompt, PromptMessage
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , transformers
                     , windows-env
  default-language:    Haskell2010

executable paths
  hs-source-dirs:      apps
  main-is:             ListPath.hs
  other-modules:       Prompt, PromptMessage
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, directory
                     , optparse-applicative
                     , windows-env
  default-language:    Haskell2010

executable delpath
  hs-source-dirs:      apps
  main-is:             RemovePath.hs
  other-modules:       Prompt, PromptMessage
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , transformers
                     , windows-env
  default-language:    Haskell2010

executable setenv
  hs-source-dirs:      apps
  main-is:             SetEnv.hs
  other-modules:       Prompt, PromptMessage
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , transformers
                     , windows-env
  default-language:    Haskell2010

executable delenv
  hs-source-dirs:      apps
  main-is:             UnsetEnv.hs
  other-modules:       Prompt, PromptMessage
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , transformers
                     , windows-env
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/egor-tensin/windows-env
