name:               windows-env
version:            0.1.0.0
synopsis:           Manage Windows environment variables
description:
  The only value this package currently provides is the bundled applications.
  The library currently lacks documentation, and hence is more or less
  unusable.
  .
  See the list of applications and their descriptions in README.md.
  Alternatively, visit the homepage at
  <https://github.com/egor-tensin/windows-env>.
homepage:           https://github.com/egor-tensin/windows-env
license:            MIT
license-file:       LICENSE.txt
author:             Egor Tensin
maintainer:         Egor.Tensin@gmail.com
copyright:          (c) 2015 Egor Tensin <Egor.Tensin@gmail.com>
category:           System
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  hs-source-dirs:     lib
  exposed-modules:    WindowsEnv, WindowsEnv.Environment
  other-modules:      WindowsEnv.Registry, WindowsEnv.Utils
  ghc-options:        -Wall -Werror
  build-depends:      base
                    , bytestring
                    , split
                    , text
                    , transformers
                    , Win32 >= 2.4
  default-language:   Haskell2010

executable addpath
  hs-source-dirs:     bin
  main-is:            AddPath.hs
  other-modules:      Prompt, PromptMessage
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , optparse-applicative
                    , transformers
                    , windows-env
  default-language:   Haskell2010

executable paths
  hs-source-dirs:     bin
  main-is:            ListPaths.hs
  other-modules:      Prompt, PromptMessage
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base, directory
                    , optparse-applicative
                    , transformers
                    , windows-env
  default-language:   Haskell2010

executable delpath
  hs-source-dirs:     bin
  main-is:            RemovePath.hs
  other-modules:      Prompt, PromptMessage
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , optparse-applicative
                    , transformers
                    , windows-env
  default-language:   Haskell2010

executable setenv
  hs-source-dirs:     bin
  main-is:            SetEnv.hs
  other-modules:      Prompt, PromptMessage
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , optparse-applicative
                    , transformers
                    , windows-env
  default-language:   Haskell2010

executable delenv
  hs-source-dirs:     bin
  main-is:            UnsetEnv.hs
  other-modules:      Prompt, PromptMessage
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , optparse-applicative
                    , transformers
                    , windows-env
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/egor-tensin/windows-env
