name:                wintmp
version:             0.1.0.0
synopsis:            Windows "tmp" directory
description:         Please see README.md
homepage:            https://github.com/egor-tensin/wintmp
license:             MIT
license-file:        LICENSE.txt
author:              Egor Tensin
maintainer:          Egor.Tensin@gmail.com
copyright:           (c) 2015 Egor Tensin <Egor.Tensin@gmail.com>
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Environment, Registry, Utils
  ghc-options:         -Wall -Werror
  build-depends:       base, split, Win32
  default-language:    Haskell2010

executable add_path
  hs-source-dirs:      apps
  main-is:             AddPath.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , wintmp
  default-language:    Haskell2010

executable fix_nt_symbol_path
  hs-source-dirs:      apps
  main-is:             FixNtSymbolPath.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, directory, filepath
                     , wintmp
  default-language:    Haskell2010

executable list_path
  hs-source-dirs:      apps
  main-is:             ListPath.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, directory
                     , optparse-applicative
                     , wintmp
  default-language:    Haskell2010

executable remove_path
  hs-source-dirs:      apps
  main-is:             RemovePath.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , wintmp
  default-language:    Haskell2010

executable set_env
  hs-source-dirs:      apps
  main-is:             SetEnv.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , wintmp
  default-language:    Haskell2010

executable unset_env
  hs-source-dirs:      apps
  main-is:             UnsetEnv.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , wintmp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/egor-tensin/wintmp
